--- a/src/views/partials/sidebar.ejs
+++ b/src/views/partials/sidebar.ejs
@@ -1,34 +1,49 @@
-<div class="d-flex flex-column flex-shrink-0 p-3 " style="width: 230px; height: 100vh; background-color: darkgray;">
-    <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
+<div class="d-flex flex-column flex-shrink-0 p-3 "
+    style="width: 230px; height: 100vh; background-color: rgb(255, 255, 255);">
+    <a href="#" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
         <svg class="bi pe-none me-2" width="40" height="32">
             <use xlink:href="#bootstrap"></use>
         </svg>
         <span class="fs-4">Admin</span>
     </a>
     <hr>
-    <ul class="nav nav-pills flex-column mb-auto">
+    <ul class="nav nav-pills flex-column mb-auto" id="sideBarMenu">
         <li class="nav-item">
-            <a href="dashboard" class="nav-link active" aria-current="page">
-                Dashboard
-            </a>
-        </li>
-
-        <li>
-            <a href="/user" class="nav-link link-dark">
-                Users
+            <a id="dashboardLinkID" page-title="dashboard" href="/dashboard" class="nav-link link-dark"
+                aria-current="page">
+                Bảng điều hướng
             </a>
         </li>
         <li>
-            <a href="/doctor" class="nav-link link-dark">
-                Doctors
+            <a id="accountLinkID" page-title="account-manager" href="/user" class="nav-link link-dark">
+                Quản lý tài khoản
             </a>
         </li>
         <li>
-            <a href="#" class="nav-link link-dark">
-                Customers
+            <a id="doctorLinkID" page-title="doctor-manager" href="/doctor-list" class="nav-link link-dark">
+                Quản lý bác sĩ
+            </a>
+        </li>
+        <li>
+            <a id="patientLinkID" page-title="patient-manager" href="/patient-list" class="nav-link link-dark">
+                Quản lý bệnh nhân
+            </a>
+        </li>
+        <li>
+            <a id="specialLinkID" page-title="special-manager" href="/specialty-list" class="nav-link link-dark">
+                Quản lý chuyên khoa
+            </a>
+        </li>
+        <li>
+            <a id="facilityLinkID" page-title="facility-manager" href="/facility-list" class="nav-link link-dark">
+                Quản lý cơ sở y tế
+            </a>
+        </li>
+        <li>
+            <a id="bookingLinkID" page-title="booking-manager" href="/booking-list" class="nav-link link-dark">
+                Quản lý lịch hẹn
             </a>
         </li>
     </ul>
     <hr>
-
 </div>
