--- a/src/views/layouts/layout.ejs
+++ b/src/views/layouts/layout.ejs
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js">
     <link rel="stylesheet" href="/css/layout.css">
+
 </head>
 
 <body>
@@ -23,7 +24,7 @@
 
     </div>
 
-
+    <script src="/js/sidebar.js"></script>
 </body>
 
 </html>
