--- a/src/views/pages/patientDetail.ejs
+++ b/src/views/pages/patientDetail.ejs
@@ -17,7 +17,7 @@
                             </p>
                             <p class="m-0">Địa chỉ: <%= patient.User.address %>
                             </p>
-                            <p class="m-0">CMND/CCCD: <%= patient.User.cityzenId %>
+                            <p class="m-0">CMND/CCCD: <%= patient.User.citizenId %>
                             </p>
                             <!-- <% } else { %>
                                 <p class="fs-6 m-0">Không có Bệnh nhân</p>
@@ -43,7 +43,7 @@
                             </p>
                             <p class="m-0">Số điện thoại: <%= patient.User.phone %>
                             </p>
-                            <p class="m-0">CMND/CCCD: <%= patient.User.cityzenId %>
+                            <p class="m-0">CMND/CCCD: <%= patient.User.citizenId %>
                             </p>
                             <p class="m-0">Địa chỉ: <%= patient.User.address %>
                             </p>
