--- a/src/views/pages/patientList.ejs
+++ b/src/views/pages/patientList.ejs
@@ -35,7 +35,7 @@
                         <%= patient.User.name %>
                     </td>
                     <td>
-                        <%= patient.cityzenId %>
+                        <%= patient.citizenId %>
                     </td>
                     <td>
                         <%= patient.User.phone %>
