--- a/src/views/pages/user.ejs
+++ b/src/views/pages/user.ejs
@@ -22,6 +22,7 @@
                     </th>
                     <td>
                         <%= user.email %>
+                        <%= user.id %>
                     </td>
                     <td>
                         <%= user.name %>
@@ -31,7 +32,7 @@
 
                     </td>
                     <td>
-                        <a type="button" href=" /user-detail/<%=user.id %>" class="btn btn-outline-secondary">Xem chi
+                        <a type="button" href=" /user-detail/<%= user.id %>" class="btn btn-outline-secondary">Xem chi
                             tiết</a>
                         <button class="btn btn-sm btn-info" onclick="editUser('<%= user.id %>')">Edit</button>
                         <button class="btn btn-sm btn-danger" onclick="deleteUser('<%= user.id %>')">Delete</button>
