--- a/src/views/layouts/layout.ejs
+++ b/src/views/layouts/layout.ejs
@@ -15,7 +15,7 @@
         <%- include('../partials/sidebar.ejs') %>
             <div class="flex-grow-1">
                 <%- include('../partials/header.ejs') %>
-                    <div class="p-4">
+                    <div class="p-4 bg-light">
                         <main>
                             <%- include('../' + page) %>
                         </main>
