--- a/src/views/pages/patientList.ejs
+++ b/src/views/pages/patientList.ejs
@@ -51,7 +51,7 @@
                                     <%= patient.User.phone %>
                                 </td>
                                 <td class="text-center">
-                                    <a href="/patient-detail/<%= patient.User.id %>">Xem chi tiết</a>
+                                    <a href="/patient-detail/<%= patient.id %>">Xem chi tiết</a>
                                 </td>
                 </tr>
                 <% }) %>
