--- a/src/views/partials/sidebar.ejs
+++ b/src/views/partials/sidebar.ejs
@@ -1,4 +1,4 @@
-<div class="d-flex flex-column flex-shrink-0 p-3 "
+<div class="d-flex flex-column flex-shrink-0 p-3 bg-white"
     style="width: 230px; height: 100vh; background-color: rgb(255, 255, 255);">
     <a href="#" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
         <svg class="bi pe-none me-2" width="40" height="32">
