booking of doctor

--- a/src/views/pages/bookingList.ejs
+++ b/src/views/pages/bookingList.ejs
@@ -16,6 +16,8 @@
             <div class="icon-wrapper mb-2">
                 <i class="fs-1 me-2 fas fa-calendar-alt text-orange-300"></i><span class="fs-1 fw-bold text-orange-500"
                     id="totalAppointmentsToday"></span>
+                <%= todayBookings %>
+                    </span>
             </div>
             <p class="mb-1 fs-5 text-orange-600">LỊCH HẸN HÔM NAY</p>
         </div>
