--- a/src/views/pages/userDetail.ejs
+++ b/src/views/pages/userDetail.ejs
@@ -2,32 +2,53 @@
     <div class="container-fluid bg-white-200 bg-opacity-75 text-center p-4 po-ralative">
         <p class="fs-5 text-gray-700 text-start" id="pageTitle">Chi tiết tài khoản</p>
         <div id="contentArea">
-            <div class="row m-0">
-                <div class="row">
-                    <div class="col ms-3 ps-2 text-start">
-                        <div class="row mb-2 border border-0 rounded shadow-sm bg-white">
-                            <p class="fw-bold fs-5 text-center">Thông tin tài khoản</p>
-                            <p class="m-0">Tên: <%= user.name %>
-                            </p>
-                            <p class="m-0">Email: <%= user.email %>
-                            </p>
-                            <p class="m-0">Giới tính: <%= user.sex %>
-                            </p>
-                            <p class="m-0">Điện thoại: <%= user.phone %>
-                            </p>
-                            <p class="m-0">Địa chỉ: <%= user.address %>
-                            </p>
-                            <p class="m-0">Vai trò: <%= user.userType %>
-                            </p>
-                            <p class="m-0">Ngày tạo: <%= user.createdAt %>
-                            </p>
-                            <p class="m-0">Ngày cập nhật: <%= user.updatedAt %>
-                            </p>
-                        </div>
-
+            <div class="d-flex justify-content-center">
+                <div class="card shadow me-2 p-5" style="width: 18rem;">
+                    <img src="/images/user.png" class="card-img-top text-center" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">
+                            <%= user.name %>
+                        </h5>
+                        <p class="card-text">
+                            Email: <%= user.email %>
+                        </p>
                     </div>
+                    <a href="#" class="btn btn-primary">Khóa tài khoản</a>
+                </div>
+                <div class="card shadow p-5" style="width: 25rem ;">
+                    <div class="card-body text-start">
+                        <h5 class="card-title text-center">
+                            Thông tin
+                        </h5>
+                        <p class="card-text">
+                            <span class="text-secondary">Giới tính:</span>
+                            <%= user.sex %>
+                        </p>
+                        <p class="card-text">
+                            <span class="text-secondary">Điện thoại:</span>
+                            <%= user.phone %>
+                        </p>
+                        <p class="card-text">
+                            <span class="text-secondary">Địa chỉ:</span>
+                            <%= user.address %>
+                        </p>
+                        <p class="card-text">
+                            <span class="text-secondary">Quyền truy cập:</span>
+                            <%= user.userType %>
+                        </p>
+                        <p class="card-text">
+                            <span class="text-secondary">Ngày tạo:</span>
+                            <%= user.createdAt %>
+                        </p>
+                        <p class="card-text">
+                            <span class="text-secondary">Ngày cập nhật:</span>
+                            <%= user.updatedAt %>
+                        </p>
+                    </div>
+                    <a href="#" class="btn btn-primary">Cập nhật</a>
                 </div>
             </div>
         </div>
     </div>
+</div>
 </div>
