--- a/src/views/pages/bookingDetail.ejs
+++ b/src/views/pages/bookingDetail.ejs
@@ -37,7 +37,8 @@
                             <% } %>
                 </div>
                 <div class="col ms-3 border border-0 rounded shadow bg-white p-5">
-                    <h4 class="text-center">Thông tin bác sĩ</h4>
+                    <h4 class="text-center text-uppercase">BÁc sĩ <%= booking.Schedule.Doctor.User.name %>
+                    </h4>
                     <% if (booking.Schedule.Doctor.User) { %>
                         <!-- <a href="/doctor-detail/<%= booking.Schedule.Doctor.User.id %>" type="button"
                             class="my-2 btn btn-outline-primary">
