--- a/src/views/pages/bookingDetail.ejs
+++ b/src/views/pages/bookingDetail.ejs
@@ -54,7 +54,7 @@
                             <%= booking.Schedule.Doctor.Facility.name %>
                         </p>
                         <p><span class="text-secondary">Giá Khám:</span>
-                            <!-- <%= booking.price %> -->
+                            <%= booking.price %>
                         </p>
                         <% } else { %>
                             <p class="fw-bold fs-5 text-center">Không có thông tin tài khoản</p>
