--- a/src/views/pages/bookingList.ejs
+++ b/src/views/pages/bookingList.ejs
@@ -31,12 +31,16 @@
         </div>
     </div>
 </div>
-<div class="row m-2 p-2 border border-0 rounded shadow bg-white">
-    <table class="table table-striped table-hover table-bordered">
+<div class="row m-2 p-4 border border-0 rounded shadow bg-white">
+    <table class="table table-striped table-hover table-bordered caption-top">
+        <caption>DANH SÁCH LỊCH KHÁM
+            <hr class="m-0">
+        </caption>
         <thead>
             <tr class="text-center">
                 <th>STT</th>
                 <th>Mã lịch</th>
+                <th>Bác sĩ</th>
                 <th>Trạng thái</th>
                 <th>Ngày khám</th>
                 <th>Thao tác</th>
@@ -50,6 +54,9 @@
                     </td>
                     <td>
                         <%= booking.id %>
+                    </td>
+                    <td>
+                        <%= booking.Schedule.Doctor.User.name %>
                     </td>
                     <td>
                         <%= booking.status %>
