--- a/src/views/pages/doctorDetail.ejs
+++ b/src/views/pages/doctorDetail.ejs
@@ -10,15 +10,15 @@
                     <h3 class="text-center text-uppercase">BÁc sĩ <%= doctor.User.name %>
                     </h3>
                     <% if (doctor) { %>
-                        <p>Giới thiệu: <%= doctor.User.name %>
+                        <p>Giới thiệu: <%= doctor.infor %>
                         </p>
-                        <p>Kinh nghiệm làm việc: <%= doctor.User.name %>
+                        <p>Kinh nghiệm làm việc: <%= doctor.experience %>
                         </p>
-                        <p>Giá cho người Việt Nam: <%= doctor.User.name %>
-                        </p>
-                        <p>Giá cho người nước ngoài: <%= doctor.User.name %>
+                        <p>Giá khám: <%= doctor.price %>
                         </p>
                         <p>Chuyên khoa: <%= doctor.Specialty.name %>
+                        </p>
+                        <p>Làm việc tại: <%= doctor.Facility.name %>
                         </p>
                         <% } else { %>
                             <p class="fs-6 m-0 text-center text-red-400">Không có thông tin bác sĩ</p>
@@ -39,7 +39,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <% if (schedules) { %>
+                            <% if (!schedules) { %>
                                 <tr>
                                     <td colspan="5" class="text-center text-secondary">Bác sĩ chưa có làm việc</td>
                                 </tr>
@@ -79,7 +79,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <% if (bookings || bookings===null) { %>
+                            <% if (bookings===null) { %>
                                 <tr>
                                     <td colspan="5" class="text-center text-secondary">Bác sĩ chưa có lịch hẹn</td>
                                 </tr>
@@ -95,7 +95,7 @@
                                             <%= bookings.date %>
                                         </td>
                                         <td>
-                                            <%= bookings.Schedule.Timeslot.startTime %>
+                                            <%= bookings.Schedule.Timeslot.startTime %> - <%= bookings.Schedule.Timeslot.endTime %>
                                         </td>
                                         <td>
                                             <a href="/booking-detail/<%= bookings.id %>">Xem chi tiết</a>
@@ -104,57 +104,6 @@
                                     <% } %>
                         </tbody>
                     </table>
-                </div> -->
-                <div class="col ms-3 ps-2 text-start">
-                    <div class="row mb-2 border border-0 rounded shadow-sm bg-white">
-                        <p class="fw-bold fs-5 text-center">Thông tin bác sĩ</p>
-                        <% if (doctor) { %>
-                            <p class="m-0">
-                                Bác sĩ <%= doctor.User.name %>
-                                    <i class="fas fa-edit fw-light text-cyan-400 ms-2" style="cursor: pointer;"
-                                        title="Chỉnh sửa thông tin" onclick="editDocInfo()"></i>
-                            </p>
-                            <p class="m-0">Giới thiệu: <%= doctor.User.name %>
-                            </p>
-                            <p class="m-0">Kinh nghiệm làm việc: <%= doctor.User.name %>
-                            </p>
-                            <p class="m-0">Giá cho người Việt Nam: <%= doctor.User.name %>
-                            </p>
-                            <p class="m-0">Giá cho người nước ngoài: <%= doctor.User.name %>
-                            </p>
-                            <p class="m-0">Chuyên khoa: <%= doctor.Specialty.name %>
-                            </p>
-                            <% } else { %>
-                                <p class="fs-6 m-0 text-center text-red-400">Không có thông tin bác sĩ</p>
-                                <% } %>
-                    </div>
-                    <div class="row border border-0 rounded shadow-sm bg-white">
-                        <% if (doctor && doctor.User) { %>
-                            <a href="/user-detail/<%= doctor.User.id %>" type="button" class="my-2 text-center">
-                                <button class="btn btn-outline-primary w-75">
-                                    <i class="me-2 fa-solid fa-hand-point-right"></i>Thông tin tài khoản
-                                </button>
-                            </a>
-                            <p class="m-0">
-                                Tài khoản <%= doctor.User.id %>
-                                    <i class="fas fa-edit fw-light text-cyan-400 ms-2" style="cursor: pointer;"
-                                        title="Chỉnh sửa thông tin"></i>
-                            </p>
-                            <p class="m-0">Vai trò: <span class="text-blue-400">
-                                    <%= doctor.User.userType %>
-                                </span></p>
-                            <p class="m-0">Giới tính: <%= doctor.User.sex %>
-                            </p>
-                            <p class="m-0">Số điện thoại: <%= doctor.User.phone %>
-                            </p>
-                            <p class="m-0">CMND/CCCD: <%= doctor.User.email %>
-                            </p>
-                            <p class="m-0">Địa chỉ: <%= doctor.User.address %>
-                            </p>
-                            <% } else { %>
-                                <p class="fw-bold fs-5 text-center text-red-400">Không có thông tin tài khoản</p>
-                                <% } %>
-                    </div>
                 </div>
             </div>
         </div>
