--- a/src/views/pages/facilityDetail.ejs
+++ b/src/views/pages/facilityDetail.ejs
@@ -30,7 +30,7 @@
                                 <th>Thao tác</th>
                             </tr>
                         </thead>
-                        <tbody>
+                        <tbody class="text-center">
                             <% doctors.forEach((doctor, index)=> { %>
                                 <tr>
                                     <td>
