--- a/src/views/pages/facilityList.ejs
+++ b/src/views/pages/facilityList.ejs
@@ -1,5 +1,8 @@
-<div class="row m-2 p-2 border border-0 rounded shadow bg-white">
-    <table class="table table-striped table-bordered table-hover">
+<div class="row m-2 p-4 border border-0 rounded shadow bg-white">
+    <table class="table table-striped table-bordered table-hover caption-top">
+        <caption>DANH SÁCH CƠ SỞ Y TẾ
+            <hr class="m-0">
+        </caption>
         <thead class="text-center">
             <tr>
                 <th>STT</th>
