--- a/src/views/pages/specialtyDetail.ejs
+++ b/src/views/pages/specialtyDetail.ejs
@@ -11,8 +11,11 @@
                     </p>
                 </div>
                 <div class="col py-5 px-3 ms-3 border border-0 rounded shadow bg-white">
-                    <table class="table table-bordered table-hover table-striped">
-                        <thead>
+                    <table class="table table-bordered table-hover table-striped caption-top">
+                        <caption>DANH SÁCH BÁC SĨ
+                            <hr class="m-0">
+                        </caption>
+                        <thead class="table-info">
                             <tr class="text-center">
                                 <th>STT</th>
                                 <th>Tên bác sĩ</th>
